--- a/jogoFase3.html
+++ b/jogoFase3.html
@@ -331,7 +331,7 @@
 						estadoAtual = estados.jogando;
 					}
 					else if (contador == 1) {
-						window.location.href = "jogoMenu.html"
+						window.location.href = "index.html"
 					}
 					else if (estadoAtual == estados.jogando){
 						bloco.score++
@@ -371,6 +371,46 @@
 			}
 
 			}
+			function clique2(event){
+				if (estadoAtual == estados.jogar) { // quando ainda vai jogar, o clique começa o jogo
+						estadoAtual = estados.jogando;
+					}
+					else if (contador == 1) {
+						window.location.href = "index.html"
+					}
+					else if (estadoAtual == estados.jogando){
+						bloco.score++
+					 }
+					else if (estadoAtual == estados.acabou){ // quando passa de fase, o clique reinicia o jogo
+						estadoAtual = estados.jogar;
+						obstaculos.limpa();
+						bloco.y = 550;
+						bloco.score = 0;
+						fundo.velocidade = 2;
+						fundo_Arvore.velocidade = 1.4;
+						fundo_bancos.velocidade = 1.7;
+						chao.velocidade = 10;
+						bloco.vida = 3;
+						bloco.x = 50;
+						xis = 600;
+						bloco.r = 0;
+	
+					}
+					else if (estadoAtual == estados.perdeu){// / quando perder, o clique reinicia o jogo
+						estadoAtual = estados.jogar;
+						obstaculos.limpa();
+						bloco.y = 550;
+						bloco.score = 0;
+						fundo.velocidade = 2;
+						fundo_Arvore.velocidade = 1.4;
+						fundo_bancos.velocidade = 1.7;
+						chao.velocidade = 10;
+						bloco.vida = 3;
+						bloco.x = 50;
+						xis = 600;
+						bloco.r = 0;
+					}
+			}
 		//função que monta o corpo do jogo (onde vão ficar as coisas)
 		function main() {
 			//tamanho do canvas
@@ -390,6 +430,7 @@
 			ctx = canvas.getContext("2d");
 			document.body.appendChild(canvas);
 			document.addEventListener("keydown", clique);
+			document.addEventListener("mousedown", clique2);
 			estadoAtual = estados.jogar;
 
 			img = new Image();
@@ -478,7 +519,7 @@
 						ctx.font = "20px Arial"
 						ctx.fillStyle = "black";
 						ctx.fillText("- Além disso, agora ela é uma boa opção para quem", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 30);
-						ctx.fillText(" quer fazer uma caminhada mais agradável, sozinho ou com", 25, LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
+						ctx.fillText(" quer fazer uma caminhada mais agradável, sozinho ou com", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 55);
 						ctx.fillText(" a família.", LARGURA / 2 - jogar.largura / 2 - 88, ALTURA / 2 - jogar.altura / 2 + 80);
 
 						ctx.fillStyle = "red";
@@ -519,7 +560,7 @@
 			}
 
 			else if (estadoAtual == estados.acabou){
-				perdeu.desenha(LARGURA / 2 - perdeu.largura / 2, ALTURA / 2 - perdeu.altura / 2);
+				fimIn.desenha(LARGURA / 2 - perdeu.largura / 2, ALTURA / 2 - perdeu.altura / 2);
 			}
 
 
