--- a/jogoIdioma.html
+++ b/jogoIdioma.html
@@ -2,19 +2,23 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=0.6">
+   <meta name="viewport" content="width=device-width, initial-scale=0.55">
 	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<style>
+      body{
+         zoom: 1;
+      }
        img{
             position: relative;
             top: 0px; /* 768px é o 100% do tamanho da janela*/
-        }
+      }
+        
 
       div#opcoes{
                 position: absolute; /* diz a posição do div*/
                 top: 375px; /* 768px é o 100% do tamanho da janela*/
-                left: 250px; /* 1720px é o 100% do tamanho da janela*/
+                left: 230px; /* 1720px é o 100% do tamanho da janela*/
                 right: 0px;
                 color: white; /* cor da letra */
                 background: red; /* cor do fundo */
@@ -25,7 +29,7 @@
 		div#jogar{
                 position: absolute; /* diz a posição do div*/
                 top: 250px; /* 768px é o 100% do tamanho da janela*/
-                left: 250px; /* 1720px é o 100% do tamanho da janela*/
+                left: 230px; /* 1720px é o 100% do tamanho da janela*/
                 right: 0px;
                 color: white; /* cor da letra */
                 background: blue; /* cor do fundo */
