--- a/jogo.html
+++ b/jogo.html
@@ -16,6 +16,17 @@
 			margin: auto;
 			color:  skyblue;
 				}
+				button#ok{
+					 position: absolute; /* diz a posição do div*/
+                top: 675px; /* 768px é o 100% do tamanho da janela*/
+                left: 550px; /* 1720px é o 100% do tamanho da janela*/
+                right: 0px;
+                color: white; /* cor da letra */
+                background: red; /* cor do fundo */
+                width: 230px; /* largura do div */
+                height: 100px; /* altura do div*/
+            }
+				}
 	</style>
 </head>
 <body>
