--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.55">
-	<title> Teste 123 </title>
+	<title> Garuá </title>
 	<script src = "SpriteMenu.js"></script>
 	<style>
 
