--- a/introducao.html
+++ b/introducao.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.7">
-        <title>Tratamento de imagem</title>
+        <title>Garuá</title>
         <style>
             p{
                 font-size: 25px;
