--- a/JogoFase2Ingles.html
+++ b/JogoFase2Ingles.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=0.7">
-	<title> Garuá </title>
+	<title> Teste </title>
 	<script src = "Sprite.js"></script>
 	<style>
 		/* canvas é a área onde todos os elementos do jogo serão colocados*/
