--- a/jogoIdioma.html
+++ b/jogoIdioma.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=0.55">
-	<title> Garuá </title>
+	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<style>
       body{
@@ -59,7 +59,7 @@
             }
 
              function clicar2(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
-               window.location.href = "Ingles.html";
+               window.location.href = "introducaoIngles.html";
             }
     </script>
 </body>
