--- a/IntroducaoIngles.html
+++ b/IntroducaoIngles.html
@@ -12,13 +12,13 @@
         </style>
     </head>
     <body>
-        <h1 align="center">História</h1>
+        <h1 align="center">Story</h1>
         <p id = "text"></p>
-        <p><b> Clique no Enter para jogar!</b>  <button onclick="ok()">Enter</button></p>
-        <p>ESPAÇO = PULAR; <br> ENTER = CONFIRMAR <br><br> Desvie do LIXO!!</p>
+        <p><b> Click Enter to play!</b>  <button onclick="ok()">Enter</button></p>
+        <p>SPACE = JUMP; <br> ENTER = CONFIRM <br><br> Dodge the TRASH!!</p>
         <script type="text/javascript">
             var el = document.querySelector("#text");
-var text = "José é um maratonista e faz suas corridas em uma pracinha perto de sua casa no Guará! Porém ele encontrará vários desafios melequentos e sujos em seu caminho... Será que ele consiguirá driblar esses desafios e ajudar a sua querida pracinha?"
+var text = "José is a marathon runner and runs in a small square near his home in Guará! However, he will find several gooey and dirty challenges on his way... Will he be able to overcome these challenges and help his square?"
 var interval = 35;
 function showtext(el, text, interval) {
   var char = text.split("").reverse();
@@ -43,7 +43,7 @@ function clique(event) {
             document.onkeydown = function(e) {
             switch (e.keyCode) {
                 case 13:
-                    window.location.href = "jogo.html"
+                    window.location.href = "JogoFase1Ingles.html"
                     break;
                 }
             }
@@ -51,7 +51,7 @@ function clique(event) {
 document.addEventListener("keydown", clique);
 
 function ok(){
-    window.location.href = "jogo.html"
+    window.location.href = "JogoFase1Ingles.html"
 }
         </script>
     </body>
