--- a/Idioma.html
+++ b/Idioma.html
@@ -59,7 +59,7 @@
             }
 
              function clicar2(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
-               window.location.href = "introducaoIngles.html";
+               window.location.href = "Ingles.html";
             }
     </script>
 </body>
