--- a/Idioma2.html
+++ b/Idioma2.html
@@ -55,11 +55,11 @@
             b.addEventListener('click', clicar2); //listener escuta o click do mouse e chama a função "clicar"
             
             function clicar(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
-               window.location.href = "introducao2.html";
+               window.location.href = "introducoes.html";
             }
 
              function clicar2(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
-               window.location.href = "introducaoIngles2.html";
+               window.location.href = "Ingleses.html";
             }
     </script>
 </body>
