Update and rename Introducoes.html to Introduco.html

--- a/Introduco.html
+++ b/Introduco.html
@@ -43,7 +43,7 @@ function clique(event) {
             document.onkeydown = function(e) {
             switch (e.keyCode) {
                 case 13:
-                    window.location.href = "jogo2.html"
+                    window.location.href = "jogu.html"
                     break;
                 }
             }
@@ -51,7 +51,7 @@ function clique(event) {
 document.addEventListener("keydown", clique);
 
 function ok(){
-    window.location.href = "jogo2.html"
+    window.location.href = "jogu.html"
 }
         </script>
     </body>
