--- a/Idioma2.html
+++ b/Idioma2.html
@@ -55,7 +55,7 @@
             b.addEventListener('click', clicar2); //listener escuta o click do mouse e chama a função "clicar"
             
             function clicar(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
-               window.location.href = "introducoes.html";
+               window.location.href = "introduco.html";
             }
 
              function clicar2(){ // executa quando clica o mouse. dentro dos parentes, coloca-se parâmetros/informações
