--- a/jogu.html
+++ b/jogu.html
@@ -308,7 +308,7 @@
 				//	contador++
 				//}
 				else if (contador == 4){ // se contador for igual a 4
-						window.location.href = "jogoFase22.html" // direciona para outro link (outra fase)
+						window.location.href = "Fase2.html" // direciona para outro link (outra fase)
 						//window.location.href = "https://dicasdejavascript.com.br/como-redirecionar-a-pagina-com-javascript/"
 					}
 			},
