--- a/Fase2.html
+++ b/Fase2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=0.7">
-	<title> Teste </title>
+	<title> Garuá </title>
 	<script src = "Sprite.js"></script>
 	<style>
 		/* canvas é a área onde todos os elementos do jogo serão colocados*/
@@ -307,7 +307,7 @@
 					if (contador == 4){
 						//window.location.href = "ProjetoIT/jogoFase2.html"
 						//window.location.href = "https://dicasdejavascript.com.br/como-redirecionar-a-pagina-com-javascript/"
-						window.location.href = "jogoFase32.html"
+						window.location.href = "Fase3.html"
 					}
 		
 
