Update and rename Ingles2.html to Ingu.html

--- a/Ingu.html
+++ b/Ingu.html
@@ -302,7 +302,7 @@
 
 				}
 				else if (contador == 4){ // se contador for igual a 4
-						window.location.href = "JogoFase2Ingles2.html" // direciona para outro link (outra fase)
+						window.location.href = "Ingu2.html" // direciona para outro link (outra fase)
 						//window.location.href = "https://dicasdejavascript.com.br/como-redirecionar-a-pagina-com-javascript/"
 					}
 			},
