Update and rename jogoFase2Ingles2.html to Ingu2.html

--- a/Ingu2.html
+++ b/Ingu2.html
@@ -307,7 +307,7 @@
 					if (contador == 4){
 						//window.location.href = "ProjetoIT/jogoFase2.html"
 						//window.location.href = "https://dicasdejavascript.com.br/como-redirecionar-a-pagina-com-javascript/"
-						window.location.href = "jogoFase3Ingles2.html"
+						window.location.href = "Ingu3.html"
 					}
 		
 
